--- a/Elijah/房客搜尋模組/房源搜尋/search/home.css
+++ b/Elijah/房客搜尋模組/房源搜尋/search/home.css
@@ -1,3 +1,25 @@
+.input-group-append{
+    cursor: pointer;
+}
+.datepicker .prev, .datepicker .next, .datepicker-days td{
+    cursor: pointer;
+}
+.old.day, .new.day{
+    color: #faa;
+}
+.dow{
+    padding: 10px;
+}
+.datepicker-days{
+    padding: 15px;
+}
+.datepicker-days td{
+    padding: 10px;
+}
+.datepicker-switch{
+    text-align: center;
+}
+
 .intro{
     height: 400px;
     margin: 50px;
@@ -10,23 +32,19 @@
     text-shadow: 10px 10px 15px rgb(0, 0, 0);
 }
 .intro-bg{
-    background: rgb(58, 58, 58);
-    margin-top: 200px;
+    background: #000;
+    margin-top: 80px;
 }
 
 .search-bar{
-    height: 100px;
-    position: fixed;
-    top: 80px;
-    z-index: 3;
-    background: #fff;
+    width: 200px;
 }
-.search-info{
+/* .search-info{
     width: 600px;
     border: 1px solid #aaa;
     border-radius: 20px;
     cursor: pointer;
-}
+} */
 
 .banner-img p{
     font-size: 40px;
