--- a/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
@@ -6,7 +6,7 @@
 }
 .room-list-map{
     margin-top: 130px;
-    height: 80%;
+    /* height: 80%; */
 }
 .map{
     position:sticky;
@@ -15,8 +15,16 @@
 .mapimg{
     height: 80vh;
 }
-.card{
+/* .card{
     min-height: 11%;
+} */
+/* .cardImgBox{
+    width: 300px;
+    height: 200px;
+} */
+.card-body{
+    padding: 0;
+    margin: 0 15px;
 }
 .btn-check:focus+.btn, .btn:focus{
     outline: 0;
