--- a/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
@@ -26,6 +26,13 @@
     padding: 0;
     margin: 0 15px;
 }
+#btn-switch-map-list{
+    width: 100px;
+    position: fixed;
+    bottom: 50px;
+    left: 40%;
+    z-index: 4;
+}
 .btn-check:focus+.btn, .btn:focus{
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(253, 253, 253, 0.25);
