--- a/Elijah/確認訂購/booking-style.css
+++ b/Elijah/確認訂購/booking-style.css
@@ -24,3 +24,17 @@
 h3{
     font-weight: bold;
 }
+.landlord-picture{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+}
+.landlord-picture img{
+    width: 100%;
+    height: 100%;
+}
+.landlord-message div{
+    font-size: 14px;
+    line-height: 18px 
+}
