房東預定、清單微調

--- a/Elaine/房東/HostList.css
+++ b/Elaine/房東/HostList.css
@@ -4,6 +4,44 @@
   font-weight: bold;
 }
 
+#hostList_searchBar {
+  /* width: 25%; */
+  height: 2rem;
+  background: #f5f5f5;
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  margin-bottom: 20px;
+  font-size: 1rem;
+}
+
+.hostList_filter_container .dropdown {
+  padding: 0 15px;
+  padding-top: 20px;
+}
+
+.hostList_filter_container .dropdown a {
+  background-color: #fff;
+  border-radius: 20px;
+  border: 1px solid #6c6c6c;
+  color: #000;
+  font-size: 14px;
+}
+
+#button_hostList_searchBar {
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+#button_hostList_searchBar:hover {
+  cursor: pointer;
+}
+
 .btn_create_house {
   border: 1px solid #6c6c6c;
   color: #222222;
@@ -19,5 +57,5 @@
 /* 房源資訊圖片 */
 
 .host_list_house_img img {
-  width: 10%;
+  width: 100px;
 }
