--- a/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
@@ -15,9 +15,18 @@
 .mapimg{
     height: 80vh;
 }
-/* .card{
-    min-height: 11%;
-} */
+
+@media screen and (max-width:767px){
+    .carousel-item > img{
+        height: 400px;
+        }
+}
+@media screen and (min-width:768px){
+    .carousel-item > img{
+        height: 12vw;
+        }
+}
+
 .card-body{
     padding: 0;
     margin: 0 15px;
