add google map api

--- a/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search-style.css
@@ -8,11 +8,11 @@
     margin-top: 130px;
     /* height: 80%; */
 }
-.map{
+.mapbox{
     position:sticky;
     top: 130px;
 }
-.mapimg{
+#map{
     height: 80vh;
 }
 
